--- a/main.css
+++ b/main.css
@@ -3,9 +3,70 @@ body {
 }
 
 .susanne {
-    width: 20%;
-    height: 20%;
+    width: 8%;
+    height: 8%;
     border-radius:20px;
-
-
+    position: relative;
 }
+.nav {
+    display: left;
+}
+/* Navbar */
+
+header {
+    max-width: 100%;
+    font-family: 'Rokkitt', serif;
+    font-weight: 400;
+  }
+  
+  .school {
+    display: inline-block;
+    margin: 10px 5px;
+    padding-bottom: 20px;
+  }
+  
+  .nav img {
+    width: 220px;
+    margin-top: 5px;
+    margin-left: 10px;
+  }
+  
+  .nav ul {
+    float: right;
+    margin: 15px 5px;
+  }
+  
+  .nav li {
+    display: inline-block;
+    padding: 0 8px;
+  }
+  
+  .nav a:link,
+  .nav a:visited {
+    text-decoration: none;
+    /* color: #d9dce2; */
+    color: #fcfcfc;
+  }
+  
+  .nav a:hover {
+    border-bottom: 1px solid #fcfcfc;
+  }
+  
+  @media (max-width: 532px) {
+    .nav ul {
+        display: none;
+    }
+  }
+  h1 {
+    font-family: 'Amatic SC', cursive; 
+    font-size: xx-large;
+
+  }
+  h2 {
+    font-family: 'Amatic SC', cursive; 
+    text-align: center;
+  }
+  p {
+    font-family: 'Shadows Into Light', cursive;
+    text-align: center;
+  }
