--- a/main.css
+++ b/main.css
@@ -80,76 +80,121 @@ header {
     font-size:12px;
   }
   
-  .skillbar {
-      position:relative;
-      display:block;
-      margin-bottom:15px;
-      width:100%;
-      background:#eee;
-      height:35px;
-      border-radius:3px;
-      -moz-border-radius:3px;
-      -webkit-border-radius:3px;
-      -webkit-transition:0.4s linear;
-      -moz-transition:0.4s linear;
-      -ms-transition:0.4s linear;
-      -o-transition:0.4s linear;
-      transition:0.4s linear;
-      -webkit-transition-property:width, background-color;
-      -moz-transition-property:width, background-color;
-      -ms-transition-property:width, background-color;
-      -o-transition-property:width, background-color;
-      transition-property:width, background-color;
+  /* Skills Bar */
+
+  #skill { 
+    list-style: none;
+    font: 12px "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
+    width: 296px;
+    margin: 50px auto 0;
+    position: relative;
+    line-height: 2em;
+    padding: 30px 0;
   }
   
-  .skillbar-title {
-      position:absolute;
-      top:0;
-      left:0;
-  width:110px;
-      font-weight:bold;
-      font-size:13px;
-      color:#ffffff;
-      background:#6adcfa;
-      -webkit-border-top-left-radius:3px;
-      -webkit-border-bottom-left-radius:4px;
-      -moz-border-radius-topleft:3px;
-      -moz-border-radius-bottomleft:3px;
-      border-top-left-radius:3px;
-      border-bottom-left-radius:3px;
+  #skill li { 
+    margin-bottom:50px; 
+    background:#e9e5e2;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#e1ddd9), to(#e9e5e2));
+    background-image: -webkit-linear-gradient(top, #e1ddd9, #e9e5e2);
+    background-image: -moz-linear-gradient(top, #e1ddd9, #e9e5e2);
+    background-image: -ms-linear-gradient(top, #e1ddd9, #e9e5e2);
+    background-image: -o-linear-gradient(top, #e1ddd9, #e9e5e2);
+    background-image: linear-gradient(top, #e1ddd9, #e9e5e2);  
+    height:20px; 
+    border-radius:10px; 
+    -moz-box-shadow: 0 1px 0px #bebbb9 inset, 0 1px 0 #fcfcfc;	 
+    -webkit-box-shadow: 0 1px 0px #bebbb9 inset, 0 1px 0 #fcfcfc;	 
+    box-shadow: 0 1px 0px #bebbb9 inset, 0 1px 0 #fcfcfc;	  
   }
   
-  .skillbar-title span {
-      display:block;
-      background:rgba(0, 0, 0, 0.1);
-      padding:0 20px;
-      height:35px;
-      line-height:35px;
-      -webkit-border-top-left-radius:3px;
-      -webkit-border-bottom-left-radius:3px;
-      -moz-border-radius-topleft:3px;
-      -moz-border-radius-bottomleft:3px;
-      border-top-left-radius:3px;
-      border-bottom-left-radius:3px;
+  #skill li h3 { 
+    position:relative; 
+    top:-25px;
   }
   
-  .skillbar-bar {
-      height:35px;
-      width:0px;
-      background:#6adcfa;
-      border-radius:3px;
-      -moz-border-radius:3px;
-      -webkit-border-radius:3px;
+  .bar { 
+    height:18px; 
+    margin:1px 2px;  
+    position:absolute;
+    border-radius:10px;
+    -moz-box-shadow: 0 1px 0px #fcfcfc inset, 0 1px 0 #bebbb9;
+    -webkit-box-shadow: 0 1px 0px #fcfcfc inset, 0 1px 0 #bebbb9;	 
+    box-shadow: 0 1px 0px #fcfcfc inset, 0 1px 0 #bebbb9;		
   }
   
-  .skill-bar-percent {
-      position:absolute;
-      right:10px;
-      top:0;
-      font-size:11px;
-      height:35px;
-      line-height:35px;
-      color:#ffffff;
-      color:rgba(0, 0, 0, 0.4);
+  .HTML {
+    width:100%; 
+    -moz-animation:HTML 2s ease-out;
+    -webkit-animation:HTML 2s ease-out;
+    background-color: #f674a4;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#f674a4), to(#e06995));
+    background-image: -webkit-linear-gradient(top, #f674a4, #e06995);
+    background-image: -moz-linear-gradient(top, #f674a4, #e06995);
+    background-image: -ms-linear-gradient(top, #f674a4, #e06995);
+    background-image: -o-linear-gradient(top, #f674a4, #e06995);
+    background-image: linear-gradient(top, #f674a4, #e06995);
   }
-}
+  
+  .CSS {
+    width:90%;
+    -moz-animation:CSS 2s ease-out;
+    -webkit-animation:CSS 2s ease-out;
+    background-color: #f0bb4b;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#f0bb4b), to(#d9aa44));
+    background-image: -webkit-linear-gradient(top, #f0bb4b, #d9aa44);
+    background-image: -moz-linear-gradient(top, #f0bb4b, #d9aa44);
+    background-image: -ms-linear-gradient(top, #f0bb4b, #d9aa44);
+    background-image: -o-linear-gradient(top, #f0bb4b, #d9aa44);
+    background-image: linear-gradient(top, #f0bb4b, #d9aa44);
+  }
+  
+  .JS {
+    width:65%;
+    -moz-animation:JS 2s ease-out;
+    -webkit-animation:JS 2s ease-out;
+    background-color: #a1ce5b;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#a1ce5b), to(#91ba52));
+    background-image: -webkit-linear-gradient(top, #a1ce5b, #91ba52);
+    background-image: -moz-linear-gradient(top, #a1ce5b, #91ba52);
+    background-image: -ms-linear-gradient(top, #a1ce5b, #91ba52);
+    background-image: -o-linear-gradient(top, #a1ce5b, #91ba52);
+    background-image: linear-gradient(top, #a1ce5b, #91ba52);
+  }
+  
+  .Problemsolver {
+    width:80%;
+    -moz-animation:Problem Solver 2s ease-out;
+    -webkit-animation:Problem Solver 2s ease-out;
+    background-color: #66b3cc;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#66b3cc), to(#5da3ba));
+    background-image: -webkit-linear-gradient(top, #66b3cc, #5da3ba);
+    background-image: -moz-linear-gradient(top, #66b3cc, #5da3ba);
+    background-image: -ms-linear-gradient(top, #66b3cc, #5da3ba);
+    background-image: -o-linear-gradient(top, #66b3cc, #5da3ba);
+    background-image: linear-gradient(top, #66b3cc, #5da3ba)	
+  }
+  
+  .B2B {
+    width:80%;
+    -moz-animation:Problem Solver 2s ease-out;
+    -webkit-animation:Problem Solver 2s ease-out;
+    background-color:#800080;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#800080), to#590059));
+    background-image: -webkit-linear-gradient(top, #800080, #590059);
+    background-image: -moz-linear-gradient(top, #800080, #590059;
+    background-image: -ms-linear-gradient(top, #800080, #590059);
+    background-image: -o-linear-gradient(top, #800080, ##590059);
+    background-image: linear-gradient(top,#800080, #590059)	
+  }
+
+  @-moz-keyframes graphic-design {0%  { width:0px;} 100%{ width:100%;}  }
+  @-moz-keyframes html-css        { 0%  { width:0px;} 100%{ width:90%;}  }
+  @-moz-keyframes jquery      { 0%  { width:0px;} 100%{ width:65%;}  }
+  @-moz-keyframes wordpress   { 0%  { width:0px;} 100%{ width:80%;}  }
+  
+  @-webkit-keyframes graphic-design       { 0%  { width:0px;} 100%{ width:100%;}  }
+  @-webkit-keyframes html-css        { 0%  { width:0px;} 100%{ width:90%;}  }
+  @-webkit-keyframes jquery      { 0%  { width:0px;} 100%{ width:65%;}  }
+  @-webkit-keyframes wordpress   { 0%  { width:0px;} 100%{ width:80%;}  }
+  
