--- a/main.css
+++ b/main.css
@@ -8,9 +8,7 @@ body {
     border-radius:20px;
     position: relative;
 }
-.nav {
-    display: left;
-}
+
 /* Navbar */
 
 header {
@@ -18,7 +16,7 @@ header {
     font-family: 'Rokkitt', serif;
     font-weight: 400;
   }
-  
+ /* 
   .school {
     display: inline-block;
     margin: 10px 5px;
@@ -40,23 +38,16 @@ header {
     display: inline-block;
     padding: 0 8px;
   }
-  
-  .nav a:link,
-  .nav a:visited {
-    text-decoration: none;
-    /* color: #d9dce2; */
-    color: #fcfcfc;
-  }
-  
+ 
   .nav a:hover {
     border-bottom: 1px solid #fcfcfc;
   }
-  
-  @media (max-width: 532px) {
+*/
+/* @media (max-width: 532px) {
     .nav ul {
         display: none;
     }
-  }
+  }*/
   h1 {
     font-family: 'Amatic SC', cursive; 
     font-size: xx-large;
@@ -79,6 +70,102 @@ header {
     color:#525252;
     font-size:12px;
   }
+
+  /* site nav */
+
+  @import 'https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300';
+
+
+}
+html,
+body {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  margin: 0;
+ /* display: flex;*/
+  flex-direction: row;
+  flex-wrap: wrap;
+  font-family: 'Open Sans Condensed', sans-serif;
+  display:left;
+}
+
+.boxes {
+  display: left;}
+
+div[class*=box] {
+    height: 10%;
+    width: 100%; 
+  display: left;
+  justify-content: center;
+  align-items: center;
+}
+
+.boxes { background-color: deepskyblue; }
+
+.btn {
+    line-height: 50px;
+    height: 50px;
+    text-align: center;
+    width: 250px;
+    cursor: pointer;
+}
+
+/* 
+========================
+      BUTTON ONE
+========================
+*/
+.btn {
+    color: #FFF;
+    transition: all 0.3s;
+    position: relative;
+}
+.btn span {
+    transition: all 0.3s;
+}
+.btn ::before {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    opacity: 0;
+    transition: all 0.3s;
+    border-top-width: 1px;
+    border-bottom-width: 1px;
+    border-top-style: solid;
+    border-bottom-style: solid;
+    border-top-color: rgba(255,255,255,0.5);
+    border-bottom-color: rgba(255,255,255,0.5);
+    transform: scale(0.1, 1);
+}
+.btn:hover span {
+    letter-spacing: 2px;
+}
+.btn:hover::before {
+    opacity: 1; 
+    transform: scale(1, 1); 
+}
+.btn::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    transition: all 0.3s;
+    background-color: rgba(255,255,255,0.1);
+}
+.btn:hover::after {
+    opacity: 0; 
+    transform: scale(0.1, 1);
+}
+
+
   
   /* Skills Bar */
 
