--- a/main.css
+++ b/main.css
@@ -12,7 +12,7 @@ body {
 /* Navbar */
 
 header {
-    max-width: 100%;
+    /*max-width: 100%;*/
     font-family: 'Rokkitt', serif;
     font-weight: 400;
   }
@@ -83,19 +83,24 @@ body {
   height: 100%;
   overflow: hidden;
   margin: 0;
-  display: flex;
+  display:flex;
   flex-direction: row;
-  flex-wrap: wrap
+  justify-content: flex-start;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  float:left;
   font-family: 'Open Sans Condensed', sans-serif;
-  display:left;
 }
 
 .boxes {
-  display: left;}
+float:left;
+display:flex;
+
+}
 
 div[class*=box] {
-    height: 10%;
-    width: 100%; 
+  height: 10%;
+  width: 100%; 
   display: left;
   justify-content: center;
   align-items: center;
@@ -107,7 +112,7 @@ div[class*=box] {
     line-height: 50px;
     height: 50px;
     text-align: center;
-    width: 250px;
+    width: 120px;
     cursor: pointer;
 }
 
