--- a/main.css
+++ b/main.css
@@ -9,13 +9,56 @@ body {
     position: relative;
 }
 
-/* Navbar */
+/* Navbar 
+
+.flex-container {
+  display:flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+ justify-content: flex-start;
+ align-items: flex-start;
+}
 
 header {
-    /*max-width: 100%;*/
+    max-width: 100%;
     font-family: 'Rokkitt', serif;
     font-weight: 400;
   }
+
+/*
+button {
+  border: none;
+  background: #66b3cc;
+  color: #f2f2f2;
+  padding: 10px;
+  font-size: 18px;
+  border-radius: 5px;
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  float:left;
+  margin-left: 150px;
+  transition: all 500ms ease; 
+  transform-style:preserve-3d;
+   }
+      
+  button:after {
+  top: -100%;
+  left:0px;
+  width: 100%;
+  position: absolute;
+  background: #3a9999;
+  border-radius:5px;
+  content: 'Push Me';
+  transform-origin: left bottom;
+  transform: rotateX(90deg);
+      }
+      
+  button:hover {
+  transform-origin: center bottom;
+  transform: rotateX(-90deg) translateY(100%);
+      }
+
  /* 
   .school {
     display: inline-block;
@@ -71,7 +114,12 @@ header {
     font-size:12px;
   }
 
-  /* site nav */
+    
+
+
+
+
+ site nav 
 
   @import 'https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300';
 
@@ -86,7 +134,7 @@ body {
   display:flex;
   flex-direction: row;
   justify-content: flex-start;
-  justify-content: space-between;
+  /*justify-content: space-between;*/
   flex-wrap: wrap;
   float:left;
   font-family: 'Open Sans Condensed', sans-serif;
@@ -98,13 +146,13 @@ display:flex;
 
 }
 
-div[class*=box] {
+/*div[class*=boxes] {
   height: 10%;
   width: 100%; 
   display: left;
   justify-content: center;
   align-items: center;
-}
+}*/
 
 .boxes { background-color: deepskyblue; }
 
@@ -115,10 +163,14 @@ div[class*=box] {
     width: 120px;
     cursor: pointer;
 }
+#navlist li {    
+  display:inline;
+  margin-right: 30px;
+}
 
-/* 
+/*
 ========================
-      BUTTON ONE
+      BUTTON 
 ========================
 */
 .btn {
@@ -126,8 +178,9 @@ div[class*=box] {
     transition: all 0.3s;
     position: relative;
 }
-.btn span {
+#navlist a {
     transition: all 0.3s;
+  
 }
 .btn ::before {
     content: '';
@@ -147,7 +200,7 @@ div[class*=box] {
     border-bottom-color: rgba(255,255,255,0.5);
     transform: scale(0.1, 1);
 }
-.btn:hover span {
+#navlist:hover a {
     letter-spacing: 2px;
 }
 .btn:hover::before {
@@ -170,9 +223,11 @@ div[class*=box] {
     transform: scale(0.1, 1);
 }
 
+#navlist a:hover {
+color: red;
+} 
 
-  
-  /* Skills Bar */
+   /*Skills Bar*/
 
   #skill { 
     list-style: none;
