--- a/main.css
+++ b/main.css
@@ -9,6 +9,16 @@ body {
     position: relative;
 }
 
+#container {
+  position: relative;
+  -webkit-backface-visibility: hidden;
+}
+#header {
+  position: absolute;
+  top: 17px;
+  right:0;
+}
+
 /* Navbar 
 
 .flex-container {
@@ -118,7 +128,7 @@ button {
 
 
 
-
+/*
  site nav 
 
   @import 'https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300';
@@ -134,7 +144,7 @@ body {
   display:flex;
   flex-direction: row;
   justify-content: flex-start;
-  /*justify-content: space-between;*/
+  /*justify-content: space-between;
   flex-wrap: wrap;
   float:left;
   font-family: 'Open Sans Condensed', sans-serif;
@@ -145,14 +155,13 @@ float:left;
 display:flex;
 
 }
-
 /*div[class*=boxes] {
   height: 10%;
   width: 100%; 
   display: left;
   justify-content: center;
   align-items: center;
-}*/
+}
 
 .boxes { background-color: deepskyblue; }
 
@@ -172,7 +181,7 @@ display:flex;
 ========================
       BUTTON 
 ========================
-*/
+
 .btn {
     color: #FFF;
     transition: all 0.3s;
@@ -227,7 +236,7 @@ display:flex;
 color: red;
 } 
 
-   /*Skills Bar*/
+   /*Skills Bar
 
   #skill { 
     list-style: none;
@@ -344,4 +353,4 @@ color: red;
   @-webkit-keyframes html-css        { 0%  { width:0px;} 100%{ width:90%;}  }
   @-webkit-keyframes jquery      { 0%  { width:0px;} 100%{ width:65%;}  }
   @-webkit-keyframes wordpress   { 0%  { width:0px;} 100%{ width:80%;}  }
-  
+  */
