--- a/main.css
+++ b/main.css
@@ -11,7 +11,7 @@ body {
     font-size: xx-large;
 }
 
-.flex-container {
+.menu {
 display:flex;
 flex-direction:row;
 max-width: 100%;
@@ -22,7 +22,7 @@ float:left;
 }
 
 .nav ul {
-  float: right;
+  float: left;
   margin: 15px 5px;
 }
 
