--- a/main.css
+++ b/main.css
@@ -2,7 +2,10 @@ body {
   background-color:rgb(2,201,201);
 }
 
+
 .susanne {
+    display: flex;
+    justify-content: center;
     width: 8%;
     height: 8%;
     border-radius:20px;
@@ -12,6 +15,8 @@ body {
 }
 
   h1 {
+    display:flex;
+    justify-content: center;
     font-family: 'Amatic SC', cursive; 
     font-size: xx-large;
   }
@@ -60,7 +65,7 @@ a {
   text-decoration: none;
 }
 
-.navigation {
+.nav {
   display: flex;
 }
 
@@ -117,6 +122,9 @@ menu a ::before {
     background: #F44336;
   }
 
+  .menu a:hover {
+    border-bottom: 1px solid white;
+  }
 
    /*Skills Bar*/
 
@@ -264,12 +272,12 @@ menu a ::before {
     box-sizing:border-box;
     position: relative;
     background:url("images/postcard.jpg"); /*köp vykort plus frimärke*/
-    background-image: url("images/frimärke.jpeg");
+    /*background-image: url("images/frimärke.jpeg");*/
     width: 740px;
     height: 498px;
     margin: 0 auto;
     font-family: 'Amatic SC', cursive; 
-    background: transparent;
+    /*background: transparent;*/
     box-shadow: 7px 7px 20px #555;
   }
   
