--- a/main.css
+++ b/main.css
@@ -47,48 +47,39 @@ body {
   padding: 0;
   margin: 0;
 }*/
-header {
-  max-width: 100%;
-  font-family: 'Roboto', sans-serif;
+container {
   display:flex;
-  align-items:center;
-  justify-content: baseline;
-  float:right;
-  right:10em;
-}
-
-ul {
   list-style: none;
+  font-family: 'Roboto', sans-serif;
 }
 
 a {
+  display:flex;
+  font-family:'Roboto', sans-serif;
+  font-size: 2em;
+  color: white;
   text-decoration: none;
-}
-
-.nav {
-  display: flex;
-}
+  padding: 2px 10px;
+  margin-right: 20px;
+ }		
 
 .menu { 
-  display: flex;
-  flex-direction: row;
-  
+  display: flex;  
+  list-style:none;
+  justify-content: flex-end;
 @media  (--min-sm) {
-    flex-direction: row;
-  }
+ }
 }
-
-.menu > li {
+/*.menu > li {
   @media (--min-sm) {
     &:not(:last-child) {
       margin-left: : 40px;
     }
   }
-}
+} */
 
 .menu a {
-  position: relative;
-  display: inline-block;
+  display: flex;
   font-size: 15px;
   font-weight: 300;
   color: #666;
@@ -96,12 +87,14 @@ a {
   padding: 3px 0;
   margin-bottom:10px;
   color:black;
-}
-#a::after,::before {
+  
+} 
+
+/*#a::after,::before {
       width: 100%;
       left: 0;
-    }
-
+    } */
+/*
 .menu a ::after, ::before {
     content: ''; 
     position: absolute;
@@ -109,18 +102,17 @@ a {
     width: 0;
     right: 10px;
     height: 3px;
-  }
-
-  
+  }*/
+ /* 
 menu a ::before {
     transition: width .25s cubic-bezier(0.51, 0.18, 0, 0.88) .1s;
     background: #2196f3;
   }
   
-  menu a ::after {
+menu a ::after {
     transition: width .2s cubic-bezier(0.29, 0.18, 0.26, 0.83);
-    background: #F44336;
-  }
+    background: #F44336; 
+  } */
 
   .menu a:hover {
     border-bottom: 1px solid white;
