--- a/main.css
+++ b/main.css
@@ -2,27 +2,30 @@ body {
   background-color:rgb(2,201,201);
 }
 
-
-.susanne {
-    display: flex;
-    justify-content: center;
+.landingpage{
+  display:flex;
+  justify-content: center;
+  flex-direction: column;
+  font-family:'Amatic SC', cursive; 
+}
+#susanne {
     width: 8%;
     height: 8%;
     border-radius:20px;
-    position: relative;
-    font-family: 'Amatic SC', cursive; 
+    /*position: relative;*/
+    /*font-family: 'Amatic SC', cursive; */
     font-size: xx-large;
 }
 
   h1 {
     display:flex;
     justify-content: center;
-    font-family: 'Amatic SC', cursive; 
+    /*font-family: 'Amatic SC', cursive; */
     font-size: xx-large;
   }
 
   h2 {
-    font-family: 'Amatic SC', cursive; 
+    /*font-family: 'Amatic SC', cursive; */
     text-align: center;
   }
   
