--- a/main.css
+++ b/main.css
@@ -2,7 +2,7 @@ body {
   background-color:rgb(2,201,201);
 }
 
-.landingpage{
+.container{
   display:flex;
   justify-content: center;
   flex-direction: column;
@@ -12,20 +12,22 @@ body {
     width: 8%;
     height: 8%;
     border-radius:20px;
-    /*position: relative;*/
     font-family: 'Amatic SC', cursive; 
     font-size: xx-large;
+    display:flex;
 }
 
+/* Homesite*/
   h1 {
     display:flex;
     justify-content: center;
     font-family: 'Amatic SC', cursive; 
-    font-size: xx-large;
+    font-size: 60px;
   }
 
   h2 {
     font-family: 'Amatic SC', cursive; 
+    font-size: 30px;
     text-align: center;
   }
   
@@ -38,9 +40,9 @@ body {
     width:960px;
   } */
   
-  p{
+  p {
     color:#525252;
-    font-size:12px;
+    font-size:15px;
   }
 /* Font import */
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,400');
@@ -50,6 +52,8 @@ body {
   padding: 0;
   margin: 0;
 }*/
+
+/*Sitenav*/
 container {
   display:flex;
   list-style: none;
