all these changes

--- a/main.css
+++ b/main.css
@@ -58,6 +58,8 @@ a {
   background-color: rgb(2,201,201);
   background-size: cover;
   background-repeat: no-repeat;
+  height:100%;
+  width: 100%;
 
 }
 
@@ -111,6 +113,7 @@ a {
   background-color: rgb(255, 295, 0);
   background-repeat:no-repeat;
   background-size:cover;
+ 
  
 }
 
@@ -335,12 +338,7 @@ a {
     background-attachment: fixed;
    background-size: cover;
   }
-   #post-field{
-    background-color: rgb(255, 295, 0);
-  }
-  #skills-field {
- background-color: rgb(255, 295, 0) 
-  }
+
 
   /*#a::after,::before {
       width: 100%;
