added icon buttons

--- a/main.css
+++ b/main.css
@@ -333,43 +333,28 @@ a {
    background-size: cover;
   }
 
+  /* Style buttons */
 
-  /*#a::after,::before {
-      width: 100%;
-      left: 0;
-    } */
-/*
-.menu a ::after, ::before {
-    content: ''; 
-    position: absolute;
-    top: calc(100% + 5px);
-    width: 0;
-    right: 10px;
-    height: 3px;
-  }*/
- /* 
-menu a ::before {
-    transition: width .25s cubic-bezier(0.51, 0.18, 0, 0.88) .1s;
-    background: #2196f3;
-  }
+.flexbox{
+  display:flex;
+  justify-content: center;
+ margin-top: 5%;
   
-menu a ::after {
-    transition: width .2s cubic-bezier(0.29, 0.18, 0.26, 0.83);
-    background: #F44336; 
-  } */
-   /* body {
-    font-family: 'Ubuntu', sans-serif;
-    width:960px;
-  } */
-  /** {
-  box-sizing: content-box;
-  padding: 0;
-  margin: 0;
-}*/
-/*.menu > li {
-  @media (--min-sm) {
-    &:not(:last-child) {
-      margin-left: : 40px;
-    }
-  }
-} */
+ 
+  
+}
+.btn {
+  background-color: DodgerBlue; /* Blue background */
+  border: none; /* Remove borders */
+  color: white; /* White text */
+  font-size: 16px; /* Set a font size */
+  cursor: pointer; /* Mouse pointer on hover */
+}
+
+/* Darker background on mouse-over */
+.btn:hover {
+  background-color: RoyalBlue;
+}
+
+
+  
